--- a/Thrift.Delta.UnitTest/Thrift.Delta.UnitTest.csproj
+++ b/Thrift.Delta.UnitTest/Thrift.Delta.UnitTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B9E30FE-0CEE-4DD1-973B-9FCEDEA24C95}</ProjectGuid>
+    <ProjectGuid>{EA608021-8860-4538-BFC1-CC576210D672}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Thrift.Delta</RootNamespace>
-    <AssemblyName>Thrift.Delta</AssemblyName>
+    <RootNamespace>Thrift.Delta.UnitTest</RootNamespace>
+    <AssemblyName>Thrift.Delta.UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.0.5813.39031, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,21 +48,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeltaApplier.cs" />
-    <Compile Include="DeltaGenerator.cs" />
-    <Compile Include="DeltaServiceInterface.cs" />
-    <Compile Include="MessageExtensions.cs" />
-    <Compile Include="MessageProperty.cs" />
-    <Compile Include="Messages\Configit\Thrift\Delta\Messages\ChangeSet.cs" />
-    <Compile Include="Messages\Configit\Thrift\Delta\Messages\Content.cs" />
-    <Compile Include="Messages\Configit\Thrift\Delta\Messages\KeyValue.cs" />
-    <Compile Include="Messages\Configit\Thrift\Delta\Messages\PathUpdate.cs" />
-    <Compile Include="Messages\Configit\Thrift\Delta\Messages\Special.cs" />
+    <Compile Include="DeltaApplierTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="delta.thrift" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Thrift.Delta\Thrift.Delta.csproj">
+      <Project>{7b9e30fe-0cee-4dd1-973b-9fcedea24c95}</Project>
+      <Name>Thrift.Delta</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
